# tabularium

./: CLAUDE.md  np_122_2010_table_a62.py  pyproject.toml
.docs/: context.md
docs/superpowers/plans/: 2026-05-21-indicative-deformation-modulus.md  2026-05-21-tabularium-scaffold.md  2026-05-27-np112-conventional-pressure.md  2026-05-29-working-condition-factor.md  2026-06-02-registry-refactor.md  2026-06-07-np074-terrain-condition.md  (+1 more)
src/tabularium/: __init__.py  enums.py  models.py  registry.py
src/tabularium/core/: registry.py
tabularium/: interpolation.py
tests/: test_core_registry.py  test_interpolation.py  test_models.py  test_np122_indicative_deformation_modulus_cohesive.py  test_np122_indicative_deformation_modulus_non_cohesive.py  test_np122_indicative_shear_strength.py  test_np_074_2022_terrain_condition.py  test_np_112_2014_allowable_bearing_capacity_working_condition_factor.py  test_np_112_2014_presumed_bearing_pressure_boulders.py  test_np_112_2014_presumed_bearing_pressure_fills.py  test_np_112_2014_presumed_bearing_pressure_fines.py  test_np_112_2014_presumed_bearing_pressure_gravels.py  test_np_112_2014_presumed_bearing_pressure_rocks.py  test_np_112_2014_presumed_bearing_pressure_sands.py  test_np_112_2014_presumed_bearing_pressure_table.py  test_np_122_2010_indicative_deformation_modulus_cohesive.py  test_np_122_2010_indicative_deformation_modulus_non_cohesive.py  test_np_122_2010_indicative_shear_strength.py  test_np_122_2010_indicative_shear_strength_cohesive.py  test_np_122_2010_indicative_shear_strength_non_cohesive.py  test_registry.py
(+38 files in other folders)
